<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:defaultValue="@string/pref_default_display_name"
        app:key="user_display_name"
        app:title="@string/pref_title_display_name"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_email_address"
        android:key="user_email_address"
        app:useSimpleSummaryProvider="true"
        android:title="@string/title_email_address" />
    <ListPreference
        android:defaultValue="@string/pref_default_favorite_social"
        android:entries="@array/pref_entries_favorite_social"
        android:entryValues="@array/pref_entries_favorite_social"
        android:key="user_favorite_social"
        app:useSimpleSummaryProvider="true"
        android:title="List preference" />

</PreferenceScreen>